[package]
name = "pacman"
version = "0.1.0"
authors = []
edition = "2018"
repository = "https://github.com/ta1hia/bevy_pacman"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version="0.4.0", default-features=false}
bevy_webgl2 = {version="0.4.0", optional=true}

winit = {version = "0.24.0"}
rand = "0.8.1"


[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'
